<resources>
    <string name="app_name">FinalProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_singup">SignupActivity</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu_item01">Project</string>
    <string name="nav_sub_menu_item02">Logout</string>
    <string name="nav_sub_menu">PROJECT</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <array name="projectChoice">
        <item name="Delete">Delete</item>
        <item name="Add">Add work</item>
        <item name="Detail">Project</item>
    </array>

    <array name="workChoice">
        <item name="Add">Add member</item>
        <item name="Delete">Delete</item>
        <item name="Comment">Comment</item>
        <item name="Detail">Work</item>
        <item name="done">Mark as done</item>
        <item name="off">Turn off notification</item>
        <item name="Member">Member</item>
    </array>

    <array name="workChoice1">
        <item name="Add">Add member</item>
        <item name="Delete">Delete</item>
        <item name="Comment">Comment</item>
        <item name="Detail">Work</item>
        <item name="done">Mark as done</item>
        <item name="on">Turn on notification</item>
        <item name="Member">Member</item>
    </array>

    <array name="Contact">
        <item name="Call">Call</item>
        <item name="send">Send a sms message</item>
        <item name="email">Send an email</item>
        <item name="delete">Remove this member</item>
    </array>

    <array name="Contact1">
        <item name="Call">Call</item>
        <item name="send">Send a sms message</item>
        <item name="email">Send an email</item>
    </array>
</resources>
