<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="User">
        <menu>
            <item
                android:id="@+id/navigation_item_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/nav_item_profile" />
            <item
                android:id="@+id/navigation_item_location"
                android:icon="@drawable/ic_place"
                android:title="@string/nav_item_location" />
        </menu>

    </item>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:title="New Project"
                android:id="@+id/project"
                app:actionLayout="@layout/project_row"/>
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/nav_sub_menu_item01" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_emoticon"
                android:title="@string/nav_sub_menu_item02" />
        </menu>
    </item>

</menu>